Added tox ini to help travis-CI build to pass.

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist=py27, py35, py36, flake8
+envlist=py35, py36
 
 [testenv:py35]
 basepython = python3.5
@@ -8,18 +8,12 @@ basepython = python3.5
 basepython = python3.6
 
 [testenv]
-commands=py.test --cov ecs_deploy {posargs}
+commands=pytest
 deps=
     pytest
     pytest-cov
     pytest-mock
     mock
+    moto
     requests
     boto3
-
-[testenv:flake8]
-basepython = python2.7
-deps =
-    flake8
-commands =
-flake8 ecs_deploy tests --max-line-length=120
